# ha-iracing-monitor

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  build.rs  session_info.yaml
.github/workflows/: ci.yml  release.yml  rust.yml
examples/: basic_tray.rs  dump_sample.rs  get_telemetry.rs  iracing_telem_sample.rs  simetry_sample.rs
resources/windows/: iracing_ha_monitor.wxs
src/: backend.rs  config.rs  frontend.rs  helpers.rs  iracing_client.rs  logging.rs  main.rs  monitor.rs  resources.rs  sim_monitor.rs  tray.rs
src/iracing_client/: mock.rs  windows.rs
src/platform/: mod.rs  unix.rs  windows.rs
