[package]
name = "iracing-ha-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
chrono = "0.4.39"
config = { version = "0.15.6", features = ["toml"] }
env_logger = "0.11.6"
iced = {version = "0.13.1", features = ["tokio", "image"] }
image = "0.25.5"
#iracing = "0.4.1"
#iracing-telem = "0.2.1"
log = "0.4.22"
notify = "8.0.0"
rumqttc = "0.24.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = { version = "0.8.19", features = ["display"] }
tray-icon = "0.19.2"
yaml-rust = "0.4.5"

[target.'cfg(target_os = "windows")'.dependencies]
simetry = { version = "0.2.3", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[[example]]
name = "get_telemetry"
required-features = ["iracing"]

[[example]]
name = "dump_sample"
required-features = ["iracing"]

[[example]]
name = "iracing_telem_sample"
required-features = ["iracing-telem"]

[[example]]
name = "simetry_sample"

[dev-dependencies]
iracing = "0.4.1"
iracing-telem = "0.2.1"

[profile.release]
#opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
# * strip = true requires Rust 1.59+. On older Rust versions, run strip manually on the resulting binary.