[package]
name = "iracing-ha-monitor"
version = "0.4.1"
license = "MIT OR Apache-2.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
chrono = "0.4.39"
config = { version = "0.15.6", features = ["toml"] }
directories = "6.0.0"
env_logger = "0.11.6"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio", "image"] }
iced_aw = { version = "0.11.0", features = ["number_input"] }
image = "0.25.5"
#iracing = "0.4.1"
#iracing-telem = "0.2.1"
log = "0.4.22"
notify = "8.0.0"
open = "5.3.2"
rumqttc = "0.24.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = { version = "0.8.19", features = ["display"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "std"] }
tray-icon = "0.19.2"
winit = "0.30.9"
yaml-rust = "0.4.5"

[build-dependencies]
winresource = "0.1.19"

[target.'cfg(target_os = "windows")'.dependencies]
simetry = { version = "0.2.3", default-features = false }
#windows = "0.59.0"
windows = { version = "0.60.0", features = ["Win32_UI_WindowsAndMessaging"] }
winreg = "0.55.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[lints.clippy]
future_not_send = "deny"